[project]
name = "lasr-probegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NLie2", email = "nathalie.kirch.nk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0,<2.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
